# r5bsp-viewer-cpp

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.cmake  decomp.cc  decomp.hh  main.cc  rpak.cc  rpak.hh  static.hh
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/imgui/: CMakeLists.txt
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
